--- a/templates/ads/index.html.twig
+++ b/templates/ads/index.html.twig
@@ -1,6 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Vos repas préférés site
-{% endblock %}
+{% block title %}Hello AdsController!{% endblock %}
 
-{% block section1 %}{% endblock %}{% endblock %}
+{% block body %}
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    This friendly message is coming from:
+    <ul>
+        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/deliveroo/src/Controller/AdsController.php'|file_link(0) }}">src/Controller/AdsController.php</a></code></li>
+        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/deliveroo/templates/ads/index.html.twig'|file_link(0) }}">templates/ads/index.html.twig</a></code></li>
+    </ul>
+</div>
+{% endblock %}
