suppression de toutes les branches

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>
-			{% block title %}Bienvenue chez Food to you
+			{% block title %}Bienvenue chez Foood to you
 			{% endblock %}
 		</title>
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
