lisa : base parent finale

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -343,3 +343,15 @@ hr {
 .credits {
   color: #999;
 }
+
+/***************************************
+/*             LISA SECTION 1          */
+/***************************************/
+
+#flexBoxFormLogo {
+  
+}
+
+
+
+
