supression contenu lisa.css

--- a/public/assets/css/lisa.css
+++ b/public/assets/css/lisa.css
@@ -1,4 +1,4 @@
-#homeMain{
+/* #homeMain{
     background-color: white;
     height: fit-content;
     padding: 3%;
@@ -10,4 +10,4 @@
 
 .formExample{
     margin: 1%;
-text-decoration: none;}
+text-decoration: none;} */
