--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@ body {
   background-color: #f2f2f2;
   font-family: "Lato";
   font-weight: 300;
-  font-size: 16px;
+  font-size: 2em;
   color: #555;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
@@ -20,15 +20,16 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway";
-  font-weight: 300;
+  font-weight: 600;
   color: #333;
+  font-size: 1em;
 }
 
 /* Paragraph & Typographic */
 
 p {
-  line-height: 28px;
-  margin-bottom: 25px;
+  line-height: 1.5em;
+  margin-bottom: 2em;
 }
 
 .centered {
@@ -86,7 +87,7 @@ hr {
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
   color: #ffffff;
-  background-color: #74cfae;
+  background-color: #03989E;
 }
 
 .navbar-brand {
@@ -95,9 +96,14 @@ hr {
   padding-bottom: 0px;
 }
 
+.navLogo{
+  height: 10%;
+  width: 30%;
+}
+
 .btn-theme {
   color: #ffffff;
-  background-color: #74cfae;
+  background-color: #03989E;
   border-color: transparent;
 }
 
@@ -127,7 +133,7 @@ hr {
   font-size: 90px;
   font-weight: 700;
   letter-spacing: 3px;
-  color: #74cfae;
+  color: #03989E;
 }
 
 #hello h2 {
@@ -196,7 +202,7 @@ hr {
 
 #f {
   padding-top: 20px;
-  background-color: #74cfae;
+  background-color: #03989E;
 }
 
 #f p {
@@ -238,7 +244,7 @@ hr {
 }
 
 .contact-form .form-send button  {
-  background: #74cfae;
+  background: #03989E;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -247,7 +253,7 @@ hr {
 }
 
 .contact-form .form-send button:hover {
-  background: #78e0bb;
+  background: #03989E;
 }
 
 .contact-form .validate {
@@ -273,7 +279,7 @@ hr {
   border-radius: 50%;
   width: 24px;
   height: 24px;
-  border: 3px solid #18d26e;
+  border: 3px solid #03989E;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -316,7 +322,7 @@ hr {
 .contact-form .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: #03989E;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -344,13 +350,7 @@ hr {
   color: #999;
 }
 
-/***************************************
-/*             LISA SECTION 1          */
-/***************************************/
 
-#flexBoxFormLogo {
-  
-}
 
 
 
