--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,11 +24,7 @@
 		{# <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> #}
 
 		<!-- Main Stylesheet File -->
-		<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
-		{% block css%}{% endblock %} 
-		
-		
-		</head>
+		<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">{% block css %}{% endblock %} </head>
 
 		<body data-spy="scroll" data-offset="80" data-target="#thenavbar">
 
