--- a/public/assets/css/soline.css
+++ b/public/assets/css/soline.css
@@ -1,7 +1,36 @@
 h1 {
     text-align: center;
-    padding-top: 10%;
+    padding: 5%;
+    
 }
-.form{
+
+img{
+    width: 80%;
+}
+
+#button{
+    display: flex;
     justify-content: center;
 }
+.btn{
+    text-align: center ;
+    border-radius: 10px;
+}
+
+.publication{
+    padding:6%;
+    /* margin: 0 75%; */
+    display: flex;  
+    justify-content: center;
+}
+
+.vege{
+    padding-left:10px;
+}
+
+#price{
+
+}
+
+/*  Small devices (landscape phones, 576px and up) */
+@media (max-width: 767px){}
