--- a/public/assets/css/charlotte.css
+++ b/public/assets/css/charlotte.css
@@ -1,28 +1,103 @@
+/* Template ads */
+
+/* Section A */
 #homeMain{
-    background-color: white;
     height: fit-content;
-    padding: 3%;
+    background-color: white;
     display: flex;
+    padding: 3%; 
 }
 
 #logoSubtitle{
     width: 50%;
-    border: 2px solid black;
 }
+
 .logofood{
-    width: 80%;
+    width: 83%;
 }
 
 #form{
-    border: 2px solid black;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     height: auto;
+    padding-bottom: 6%;
+    padding-top: 6%;
 }
 
-/* .formExample{
-    margin: 1%;
-text-decoration: none;
-} */
+#formInside{
+    width: 80%;
+    color: black;
+}
+
+.formExampleMiddle{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.formExample{
+    text-decoration: none;
+}
+
+#buttonForm{
+    padding-top: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+/* Section B */
+
+#blockImg{
+    background-color:  #222222;
+    padding-top: 3%;
+    padding-bottom: 8%;
+}
+
+.imgDemo{
+    width: 90%;
+    border: 1px solid white;
+}
+
+h2{
+    color: white;
+}
+
+#daily{
+    background-color: white;
+}
+
+.dailyH2{
+    color: #222222;
+    text-align: center;
+} 
+
+/* Template home_connection */
+
+/* Section A */
+
+#formEdit{
+   margin-top: 3%;
+   margin-bottom: 3%;
+   display: flex;
+   justify-content: center;
+} 
+
+/*  Small devices (landscape phones, 576px and up) */
+@media (max-width: 767px){
+    #form{
+        width: 100%;
+    }
+
+    .logofood{
+        display: none;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    #logoSubtitle{
+        width: 100%;
+    }
+}
