--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -35,8 +35,7 @@
 
 {% block main %}
 <div id="post">
-    <div class="title">Aperçu de votre annonce
-    </div>
+    <div class="title">Aperçu de votre annonce</div>
     <div class="container">
         <div class="row">
             <div class="col-lg-6" id="postPresentation">
