Récupération de la bdd et modif responsive page register

--- a/templates/registration/registration.html.twig
+++ b/templates/registration/registration.html.twig
@@ -1,90 +1,96 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}S'inscrire{% endblock %}
-{% block css %} <link href="{{ asset('assets/css/soline.css') }}" rel="stylesheet"> {% endblock %}
+{% block title %}S'inscrire
+{% endblock %}
+{% block css %}
+	<link href="{{ asset('assets/css/soline.css') }}" rel="stylesheet">
+{% endblock %}
 
 {% block header %}
-<div id="thenavbar" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="{{ path('ads') }}">
-                <img class="navLogo" src="{{ asset('assets/img/logofood.jpg') }}" alt="" width="500px">
-            </a>
-        </div>
-    
-      <!--/.nav-collapse -->
-    </div>
-</div>
+	<div id="thenavbar" class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="{{ path('ads') }}">
+					<img class="navLogo" src="{{ asset('assets/img/logofood.jpg') }}" alt="" width="500px">
+				</a>
+			</div>
+
+			<!--/.nav-collapse -->
+		</div>
+	</div>
 {% endblock %}
 
 {% block main %}
 
- 
 
-<div class="container">
+	<div class="container">
+		<div class="row">
+			<h1>Inscrivez-vous</h1>
+			<div class="col-lg-6">
+				<figure class="figure">
+					<img src="{{ asset('assets/img/femme_qui_cuisine.jpg') }}" class="figure-img img-fluid " id="cookingWoman" alt="femme qui cuisine"/>
+				</figure>
+			</div>
+			<div class="col-lg-4">
+				<form>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="lastName" placeholder="Nom" required>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="firstNname" placeholder="Prénom" required>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="address" placeholder="Adresse" required>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="postCode" placeholder="Code postal" required>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="city" placeholder="Ville" required>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlTextarea1">Description de votre plat</label> #}
+						<textarea class="form-control" name="details" rows="5" placeholder="Informations complémentaires concernant votre adresse: code de la porte, étage etc. (uniquement si vous êtes vendeur)"></textarea>
+					</div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
+						<input type="text" class="form-control" name="phone" placeholder="Numéro de téléphone" required>
+					</div>
 
-  <div class="row">
-      <h1>Inscrivez-vous</h1>
-    <div class="col-lg-6">
-      <figure class="figure">
-        <img src="{{ asset('assets/img/femme_qui_cuisine.jpg') }}" class="figure-img img-fluid " alt="femme qui cuisine" />
-      </figure>
-    </div>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Nom</label> #}
+						<input type="email" class="form-control" name="email" placeholder="Email" required>
+					</div>
 
-    <div class="col-lg-4">
-      <form>
+					<div
+						class="form-group">
+						{# <label for="exampleFormControlInput1">Mot de passe</label> #}
+						<input type="password" class="form-control" name="password" placeholder="Mot de passe" required>
+					</div>
 
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-            <input type="text" class="form-control" name="lastName" placeholder="Nom" required>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-        <input type="text" class="form-control" name="firstNname" placeholder="Prénom" required>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-        <input type="text" class="form-control" name="address" placeholder="Adresse" required>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-        <input type="text" class="form-control" name="postCode" placeholder="Code postal" required>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-        <input type="text" class="form-control" name="city" placeholder="Ville" required>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlTextarea1">Description de votre plat</label> #}
-            <textarea class="form-control" name="details" rows="5" placeholder="Informations complémentaires concernant votre adresse: code de la porte, étage etc. (uniquement si vous êtes vendeur)"></textarea>
-        </div>
-        <div class="form-group">
-            {# <label for="exampleFormControlInput1">Titre de votre plat</label> #}
-        <input type="text" class="form-control" name="phone" placeholder="Numéro de téléphone" required>
-        </div>
-        
-        <div class="form-group">
-          {# <label for="exampleFormControlInput1">Nom</label> #}
-          <input type="email" class="form-control" name="email" placeholder="Email" required>
-        </div>
-
-        <div class="form-group">
-          {# <label for="exampleFormControlInput1">Mot de passe</label> #}
-          <input type="password" class="form-control" name="password" placeholder="Mot de passe" required>
-        </div>
-    
-        <div id="button">
-          <button type="submit" class="btn btn-primary">Créer mon compte</button>
-        </div>
-      </form>
-    </div> 
-  </div> 
-</div>
-{% endblock %} 
-
- 
+					<div id="button">
+						<button type="submit" class="btn btn-primary">Créer mon compte</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+{% endblock %}
