--- a/public/assets/css/soline.css
+++ b/public/assets/css/soline.css
@@ -1,11 +1,10 @@
 h1 {
     text-align: center;
-    padding: 5%;
-    
+    padding: 5%;   
 }
-
-img{
-    width: 80%;
+#cookingWoman{
+    width: 80%; 
+    margin-top: 15%;    
 }
 
 #button{
@@ -15,6 +14,8 @@ img{
 .btn{
     text-align: center ;
     border-radius: 10px;
+    background-color: #03989E;
+    font-weight: bold;
 }
 
 .publication{
@@ -28,9 +29,22 @@ img{
     padding-left:10px;
 }
 
-#price{
+/*  Small devices (landscape phones, 576px and up) */
+@media (max-width: 767px){
+    #cookingWoman{
+        padding-bottom: 20px;
+        margin-left: 10%;
+        margin-top: 0;
+    }
 
 }
+@media (min-width: 767.1px) and (max-width: 1199px) {
+    #cookingWoman{
+        padding-bottom: 20px;
+        margin-left: 10%;
+        margin-top: 0;
 
-/*  Small devices (landscape phones, 576px and up) */
-@media (max-width: 767px){}
+    }
+    
+}
+
